--- a/index2.html
+++ b/index2.html
@@ -54,12 +54,12 @@
                 </div>
 
 
-                <button type="button" class="button" onclick=checkAll()>Регистрация</button>
+                <button type="button" class="button" onclick="checkAll();">Регистрация</button>
                 <div id="errorMessage"></div>
             </form>
         </div>
     </main>
-    <script src="script2.html"></script>
+    <script src="script2.js"></script>
 </body>
 
 </html>
