add localStorage task

--- a/index2.html
+++ b/index2.html
@@ -33,7 +33,7 @@
             <h1 class="form-title">
                 Регистрация
             </h1>
-            <!-- обязательно написать onsubmit="return false;" без этого сообщение показывалось на секунду и убиралось -->
+            <!-- обязательно написать onsubmit="return false;" без этого сообщение показывалось на секунду и убиралось, либо можно написать  внутри тега form novalidate -->
             <form onsubmit="return false;">
                 <div class="form-fields">
                     <div class="form-field">
